<resources>
    <string name="app_name">Sai Pet Wear</string>
    <string name="rhino_image">サイの状態イメージ</string>
    <string name="focus_score">集中スコア</string>
    <string name="usage_today">今日の使用時間</string>
    <string name="fullness">げんきゲージ</string>
    <string name="feed_action">12ptでエサをあげる</string>
    <string name="feed_locked_action">スコア不足</string>
    <string name="closet_title">クローゼット</string>
    <string name="closet_subtitle">Watch では服の切り替えだけ操作できます</string>
    <string name="outfit_none">はだか</string>
    <string name="outfit_cape">ケープ</string>
    <string name="outfit_bow">リボン</string>
    <string name="outfit_rain">レインコート</string>
    <string name="score_value">%1$d pt</string>
    <string name="usage_value">%1$d min</string>
    <string name="fullness_value">%1$d / 100</string>
</resources>
